# microbit-voice-recognition-C

./: CMakeLists.txt  README.md  build.bat  edge-impulse-wrapper.cpp  edge-impulse-wrapper.h  main.ts  pxt.json  shims.d.ts  test-main.cpp  test.ts  voice-recognition-binding.cpp  voice-recognition.ts
